<resources>
    <string name="app_name">Ministry</string>
    <string name="splash_app_name">Ministryapp</string>
    <string name="motto">\"Trust in Jehovah and do what is good.\"</string>
    <string name="title_section1">Report</string>
    <string name="title_section2">Return visits</string>
    <string name="title_section3">Notes</string>
    <string name="title_section4">Sample Presentations</string>
    <string name="title_section5">Settings</string>
    <string name="title_section6">Send your report</string>
    <string name="title_section7">Videos</string>
    <string name="title_section8">Territories</string>
    <string name="title_section9">Calendar</string>
    <string name="title_section_more">More</string>
    <string name="reset">Reset all reportdata</string>
    <string name="resetdialog_message">ALL data will be lost! Continue?</string>
    <string name="resetdialog_title">Really?</string>
    <string name="action_save">Save</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_ziel">Goal</string>
    <string name="action_delete_rueck">Remove person</string>
    <string name="title_activity_senden">Send</string>
    <string name="title_activity_empfehlungen">Sample Presentations</string>
    <string name="title_activity_settings_new">Settings</string>
    <string name="transition_fab">fab_transition</string>
    <string name="noreturnvisit">No Return Visits</string>
    <string name="age_returnvisit">Age</string>
    <string name="genderreturnvisit">Gender</string>
    <string name="notes_returnvisit">Notes</string>
    <string name="wohnortreturnvisit">Residence</string>
    <string name="remove_returnvisit">REMOVE</string>
    <string name="notsaid">Not&#160;specified</string>
    <string name="weiblich">Female</string>
    <string name="männlich">Male</string>
    <string name="citynotsaid">City&#160;not&#160;specified</string>
    <string name="streetnotsaid">Street&#160;not&#160;specified</string>
    <string name="nonotes">No&#160;Notes</string>
    <string name="noconnect">No&#160;network available!</string>
    <string name="URL_end">en</string>
    <string name="title_activity_stunden">Hours</string>
    <string name="title_activity_abgaben">Placements</string>
    <string name="title_activity_rückbesuche">Return Visits</string>
    <string name="title_activity_videos">Videos</string>
    <string name="title_activity_heimb">Bible Studies</string>
    <string name="attention">ATTENTION</string>
    <string name="warnung">Ensure, that nobody can see the returnvisits! The apps creator assumes no liability.</string>
    <string name="notes_text">Write down your notes!</string>
    <string name="sendreport_text">Send ministry report to</string>
    <string name="error">ERROR</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="video_exception">There was an error while downloading a video.</string>
    <string name="videolist_exception">There was an error while loading the list of videos.</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="year_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>
    <string name="monat1">January</string>
    <string name="monat2">February</string>
    <string name="monat3">March</string>
    <string name="monat4">April</string>
    <string name="monat5">May</string>
    <string name="monat6">June</string>
    <string name="monat7">July</string>
    <string name="monat8">August</string>
    <string name="monat9">September</string>
    <string name="monat10">October</string>
    <string name="monat11">November</string>
    <string name="monat12">December</string>
    <string name="reportfor">Report for:&#160;</string>
    <string name="reportmonth">Month:&#160;</string>
    <string name="reporthours">Hours:&#160;</string>
    <string name="reportplace">Placements:&#160;</string>
    <string name="reportvisits">Return Visits:&#160;</string>
    <string name="reportvideo">Video Showings:&#160;</string>
    <string name="reportstudy">Bible Studies:&#160;</string>
    <string name="reportminutes">Minutes:&#160;</string>
    <string name="reportsentvia">Sent via Ministryapp</string>
    <string name="title_activity_see_rueck">SeeRueck</string>
    <string name="title_videos_success">Downloaded 1 video</string>
    <string name="searchable">Searchable</string>
    <string name="download_sure">Sure?</string>
    <string name="download_text">The video \"%a\" will be downloaded.</string>
    <string name="download_ok">START</string>
    <string name="download_cancel">CANCEL</string>
    <string name="delete_sure">Sure?</string>
    <string name="delete_text">The video \"%a\" will be deleted.</string>
    <string name="delete_ok">DELETE</string>
    <string name="delete_cancel">CANCEL</string>
    <string name="video_open_error">There was an error while starting the video. Please wait until it\'s downloaded.</string>
    <string name="data_cleared">Cleared data!</string>
    <string name="shortcut_entry">App shortcuts</string>
    <string name="shortcuts_dialog_title">Select homescreen shortcuts</string>
    <string name="shortcuts_not_availible">Shortcuts are not available for your version of andoid.</string>
    <string name="title_activity_bericht_add_frame">abc</string>
    <string name="ok">OK</string>
    <string name="add_bericht">Add report</string>
    <string name="change_bericht">Change report</string>
    <string name="date">Date</string>
    <string name="minutes">Minutes</string>
    <string name="onehour">Maximum minute input is 59!</string>
    <string name="twentyfourhours">There are only 24 hours a day!</string>
    <string name="insgesamt">TOTAL</string>
    <string name="swipe_up_for_more">Swipe up for the total statistics</string>
    <string name="no_bericht">No reportdata for this month! To add data click the "+" button!</string>
    <string name="warnung2">To use this function you have to set-up a screen lock. Should I help you with that?</string>
    <string name="activate_data">Activate your wi-fi or data connection to download this video.</string>
    <string name="bericht_error">Oops.. There was an error while loading your report. If your report is not displayed correctly, restart the app.</string>
    <string name="bericht_undo_1">Removed entry</string>
    <string name="bericht_undo_2">UNDO</string>
    <string name="videos_offline_mode">OFFLINE-MODE</string>
    <string name="goal_set">Set your monthly goal</string>
    <string name="goal_msg">Type in your monthly hour goal:</string>
    <string name="OK">OK</string>
    <string name="goal_no">Remove goal</string>
    <string name="goal_text_mult">%a hours to reach the goal</string>
    <string name="goal_text_1">%a hour to reach the goal</string>
    <string name="goal_text_reached">You reached your goal!</string>
    <string name="goal_text_reached_more">You reached your goal! +%ah more</string>
    <string name="goal_invalid">Invalid goal</string>
    <string name="impressum">Imprint</string>
    <string name="licenses">Licenses</string>
    <string name="weusethat">We thank all the creators of the libraries, we use, for their great work! The libraries we\'re using are:</string>
    <string name="gebiet_add">Add territory</string>
    <string name="gebiet_add_msg">Type in a streetname of your territory (with name of city behind):</string>
    <string name="gebiet_add_cancel">Cancel</string>
    <string name="gebiet_house_add">Add house</string>
    <string name="gebiet_house_add_msg">Type in a house number (with additional letter):</string>
    <string name="gebiet_house_add_msg_change">Type in the new house number (with additional letter):</string>
    <string name="gebiet_house_add_invalid">This house number is already existing!</string>
    <string name="gebiet_house_wohnungsinhaber">householder(s)</string>
    <string name="gebiet_house_add_wohnungsinhaber">Add householder</string>
    <string name="gebiet_house_first_name">First name</string>
    <string name="gebiet_house_last_name">Last name</string>
    <string name="gebiet_house_last_first_name">Last name First name</string>
    <string name="gebiet_house_age">Age</string>
    <string name="gebiet_house_native_lang">Language</string>
    <string name="gebiet_house_publications">Publications (add with Enter)</string>
    <string name="gebiet_house_notes">Notes</string>
    <string name="gebiet_delete">Delete</string>
    <string name="gebiet_send">Send</string>
    <string name="gebiet_maps">See in map</string>
    <string name="gebiet_maps_title">Open with...</string>
    <string name="gebiet_maps_google">Google Maps</string>
    <string name="gebiet_maps_osm">OpenStreetMap (house numbers)</string>
    <string name="gebiet_delete_sure_title">Delete xx?</string>
    <string name="gebiet_delete_sure">This action can\'t be undone.</string>
    <string name="gebiet_housenumber_delete_sure">This action can\'t be undone.</string>
    <string name="gebiet_maps_no_map_app">There\'s no maps app installed, so the map will open in your browser.</string>
    <string name="no_gebiet">No territories! To add data click the "+" button!</string>
    <string name="gebiet_house_rename">Rename house number</string>
    <string name="gebiet_house_delete">Delete housenumber</string>
    <string name="gebiet_householder_delete">Delete householder</string>
    <string name="gebiet_house_change">Change xx</string>
    <string name="gebiet_house_not_valid_age">Entered age invalid</string>
    <string-array name="gebiet_house_genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="gebiet_house_interest_types">
        <item> </item>
        <item>Interested</item>
        <item>No interest</item>
        <item>Not at home</item>
        <item>Bible study</item>
        <item>Return visit</item>
    </string-array>
    <string name="gebiet_householder_edit">Edit householder</string>
    <string name="drawer_alt">OLD</string>
    <string name="bericht_type_name">Please type in your name, so your report can be completed.</string>
    <string name="report_layout_settings">Reports layout</string>
    <string name="report_layout_msg">Here you can change the layout of the reports page.\nPreview:</string>
    <string name="report_layout_1">Big</string>
    <string name="report_layout_2">Small</string>
    <string name="rueck_no_add_anymore_title">Bye bye!</string>
    <string name="rueck_no_add_anymore">The return visits say goodbye! This function will soon be gone, but there\'s already an alternative: The territory tab.</string>
    <string name="title_activity_gebiete_houses">GebieteHouses</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_gebiet_householder">ChangeGebietHouseholder</string>
    <string name="drawer_ticker_news">NEWS</string>
    <string name="drawer_ticker_no_news">++NEWS++ No news available ++NEWS++</string>
    <string name="empf_not_available">Sample Presentations not availible for system date.</string>
    <string name="kalender_partner">Partner</string>
    <string name="kalender_notes">Notes</string>
</resources>