<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#fff"
    tools:context="tk.phili.dienst.dienst.KalenderAddFrame"
    tools:showIn="@layout/activity_kalender_add_frame">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/ic_date_range_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/editText2"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:layout_alignBottom="@+id/editText2"
                android:layout_toLeftOf="@+id/editText2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="20dp" />

            <EditText
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/add_calendar_date"
                android:hint="@string/date"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_row="0"
                android:layout_column="1"
                android:clickable="false"
                android:editable="false" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/ic_people_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/editText2"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:layout_alignBottom="@+id/editText2"
                android:layout_toLeftOf="@+id/editText2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="20dp" />

            <EditText
                android:id="@+id/add_calendar_partner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_row="0"
                android:ems="10"
                android:hint="@string/kalender_partner" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_marginLeft="20dp"
                app:srcCompat="@drawable/ic_chrome_reader_mode_black_24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/editText2"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:layout_alignBottom="@+id/editText2"
                android:layout_toLeftOf="@+id/editText2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="20dp" />

            <EditText
                android:id="@+id/add_calendar_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_row="0"
                android:ems="10"
                android:hint="@string/kalender_notes" />

        </TableRow>
    </TableLayout>

</android.support.v4.widget.NestedScrollView>
